--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
             TITULO
         MENU           (Debajo de la Cabecera y que ocupe el 100%)
         CONTENIDO      (Debajo del menu y al lado de Lateral)
-        BARRA LATERAL  (Debajo del menu y a la derecha de contenido)
+        BARRA LATERAL  (Debajo del menu y a la derecha del contenido)
         FOOTER         (Abajo del todo y que ocupe el 100%)
+
     -->
 
     <div id="website-areas">
       <header id="cabecera">
-        <h1>WEB CON AREAS</h1>
+        <h1>WEB usando Grid - AREAS</h1>
       </header>
 
       <nav id="menu">
@@ -64,7 +65,7 @@
 
     <div id="website">
       <header id="cabecera">
-        <h1>Titulo de mi web</h1>
+        <h1>WEB usando Grid</h1>
       </header>
 
       <nav id="menu">
